--- a/lesson4/packages/plugin4/package.json
+++ b/lesson4/packages/plugin4/package.json
@@ -19,7 +19,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "PUBLIC_URL='auto' react-scripts build && cpy --cwd build/static/js main.*.js . --rename=main.js && cpy --cwd build/static/css main.*.css . --rename=main.css",
+        "build": "react-scripts build && cpy --cwd build/static/js main.*.js . --rename=main.js && cpy --cwd build/static/css main.*.css . --rename=main.css",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
